# LittleWhite

./: FlaskServerTwo.py  README.txt  const.py  evaluate_hed_pi_liang.py  evaluate_hed_single.py  hedhouv4.py  key.jks  preprocess.py  train.py  util.py
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CBinarize.cpp  CBinarize.h  CMakeLists.txt  android_log.h  android_log2.h  cbinarizer.cpp  cmdutils.c  cmdutils_common_opts.h  config.h  ffmpeg.c  ffmpeg.h  jx_ffmpeg_cmd_run.c
app/src/main/cpp/include/: libyuv.h
app/src/main/cpp/opencv2/: calib3d.hpp  core.hpp  features2d.hpp  flann.hpp  highgui.hpp  imgproc.hpp  ml.hpp  objdetect.hpp  opencv.hpp  photo.hpp  videoio.hpp
app/src/main/cpp/opencv2/core/: base.hpp  bindings_utils.hpp  check.hpp  core_c.h  cuda.hpp  cuda.inl.hpp  cvdef.h  cvstd_wrapper.hpp  eigen.hpp  fast_math.hpp  mat.hpp  matx.hpp  ocl.hpp  opengl.hpp  optim.hpp  persistence.hpp  saturate.hpp  types.hpp  types_c.h  utility.hpp  va_intel.hpp  vsx_utils.hpp
app/src/main/cpp/opencv2/core/cuda/: common.hpp
app/src/main/cpp/opencv2/core/hal/: intrin.hpp  intrin_cpp.hpp  intrin_neon.hpp  intrin_sse.hpp  intrin_vsx.hpp
app/src/main/cpp/opencv2/core/opencl/: ocl_defs.hpp  opencl_info.hpp
app/src/main/cpp/opencv2/core/utils/: trace.hpp
app/src/main/cpp/opencv2/dnn/: all_layers.hpp  dnn.hpp  shape_utils.hpp
app/src/main/cpp/opencv2/features2d/hal/: interface.h
app/src/main/cpp/opencv2/flann/: miniflann.hpp
app/src/main/cpp/opencv2/highgui/: highgui_c.h
app/src/main/cpp/opencv2/imgproc/: imgproc_c.h
app/src/main/cpp/opencv2/imgproc/hal/: hal.hpp
app/src/main/cpp/opencv2/objdetect/: detection_based_tracker.hpp
app/src/main/cpp/opencv2/photo/: cuda.hpp
app/src/main/cpp/opencv2/stitching/detail/: matchers.hpp  warpers.hpp
app/src/main/cpp/opencv2/video/: tracking.hpp
app/src/main/cpp/opencv2/videoio/: registry.hpp  videoio_c.h
app/src/main/res/layout/: activity_action.xml  activity_front_cameracapture.xml  activity_history.xml  activity_main.xml  activity_receive.xml  activity_send_file.xml  activity_send_file_selection.xml  activity_settings.xml  activity_transmition_complete.xml  activity_video_play.xml  content_settings.xml  file_manager.xml  item_file.xml  list_item.xml
app/src/main/res/values/: SpinnerDatas.xml  colors.xml  ids.xml  strings.xml
app/src/main/res/xml/: file_path.xml
ffmpeg-3.2.5/: UpgradeLog.htm  config.asm  config.fate  config.h  config.mak  configure  jianxi_ffmpeg_arm64_v8a_build.sh  jianxi_ffmpeg_arm64_v8a_build_more.sh  jianxi_ffmpeg_arm_build.sh  jianxi_ffmpeg_arm_build_more.sh  jianxi_ffmpeg_arm_v7a_build.sh  jianxi_ffmpeg_arm_v7a_build_more.sh  jianxi_ffmpeg_x86_64_build.sh  jianxi_ffmpeg_x86_64_build_more.sh  jianxi_ffmpeg_x86_build.sh  jianxi_ffmpeg_x86_build_more.sh
ffmpeg-3.2.5/doc/: config.texi
ffmpeg-3.2.5/doc/examples/pc-uninstalled/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc
ffmpeg-3.2.5/fdk-aac-0.1.5/: Makefile  fdk_aac_arm64_v8a_build.sh  fdk_aac_arm_build.sh  fdk_aac_mips_build.sh  fdk_aac_x86_64_build.sh  fdk_aac_x86_build.sh  libfdk-aac.la  libtool
ffmpeg-3.2.5/fdk-aac-0.1.5/android/arm/lib/: libfdk-aac.la
ffmpeg-3.2.5/fdk-aac-0.1.5/android/arm64-v8a/lib/: libfdk-aac.la
ffmpeg-3.2.5/fdk-aac-0.1.5/android/mips/lib/: libfdk-aac.la
ffmpeg-3.2.5/fdk-aac-0.1.5/android/x86/lib/: libfdk-aac.la
ffmpeg-3.2.5/fdk-aac-0.1.5/android/x86_64/lib/: libfdk-aac.la
ffmpeg-3.2.5/fdk-aac-0.1.5/libAACdec/src/.deps/: aac_ram.Plo  aac_rom.Plo  aacdec_drc.Plo  aacdec_hcr.Plo  aacdec_hcr_bit.Plo  aacdec_hcrs.Plo  aacdec_pns.Plo  aacdec_tns.Plo  aacdecoder.Plo  aacdecoder_lib.Plo  block.Plo  channel.Plo  channelinfo.Plo  conceal.Plo  ldfiltbank.Plo  pulsedata.Plo  rvlc.Plo  rvlcbit.Plo  rvlcconceal.Plo  stereo.Plo
ffmpeg-3.2.5/fdk-aac-0.1.5/libAACenc/src/.deps/: aacEnc_ram.Plo  aacEnc_rom.Plo  aacenc.Plo  aacenc_lib.Plo  aacenc_pns.Plo  aacenc_tns.Plo  adj_thr.Plo  band_nrg.Plo  bandwidth.Plo  bit_cnt.Plo  bitenc.Plo  block_switch.Plo  channel_map.Plo  chaosmeasure.Plo  dyn_bits.Plo  grp_data.Plo  intensity.Plo  line_pe.Plo  metadata_compressor.Plo  metadata_main.Plo  ms_stereo.Plo  noisedet.Plo  pnsparam.Plo  pre_echo_control.Plo  psy_configuration.Plo  psy_main.Plo  qc_main.Plo  quantize.Plo  sf_estim.Plo  spreading.Plo  tonality.Plo  transform.Plo
ffmpeg-3.2.5/fdk-aac-0.1.5/libFDK/src/.deps/: FDK_bitbuffer.Plo  FDK_core.Plo  FDK_crc.Plo  FDK_hybrid.Plo  FDK_tools_rom.Plo  FDK_trigFcts.Plo  autocorr2nd.Plo  dct.Plo  fft.Plo  fft_rad2.Plo  fixpoint_math.Plo  mdct.Plo  qmf.Plo  scale.Plo
ffmpeg-3.2.5/fdk-aac-0.1.5/libMpegTPDec/src/.deps/: tpdec_adif.Plo  tpdec_adts.Plo  tpdec_asc.Plo  tpdec_drm.Plo  tpdec_latm.Plo  tpdec_lib.Plo
ffmpeg-3.2.5/fdk-aac-0.1.5/libMpegTPEnc/src/.deps/: tpenc_adif.Plo  tpenc_adts.Plo  tpenc_asc.Plo  tpenc_latm.Plo  tpenc_lib.Plo
ffmpeg-3.2.5/fdk-aac-0.1.5/libPCMutils/src/.deps/: limiter.Plo  pcmutils_lib.Plo
ffmpeg-3.2.5/fdk-aac-0.1.5/libSBRdec/src/.deps/: env_calc.Plo  env_dec.Plo  env_extr.Plo  huff_dec.Plo  lpp_tran.Plo  psbitdec.Plo  psdec.Plo  psdec_hybrid.Plo  sbr_crc.Plo  sbr_deb.Plo  sbr_dec.Plo  sbr_ram.Plo  sbr_rom.Plo  sbrdec_drc.Plo  sbrdec_freq_sca.Plo  sbrdecoder.Plo
ffmpeg-3.2.5/fdk-aac-0.1.5/libSBRenc/src/.deps/: bit_sbr.Plo  code_env.Plo  env_bit.Plo  env_est.Plo  fram_gen.Plo  invf_est.Plo  mh_det.Plo  nf_est.Plo  ps_bitenc.Plo  ps_encode.Plo  ps_main.Plo  resampler.Plo  sbr_encoder.Plo  sbr_misc.Plo  sbr_ram.Plo  sbr_rom.Plo  sbrenc_freq_sca.Plo  ton_corr.Plo  tran_det.Plo
ffmpeg-3.2.5/fdk-aac-0.1.5/libSYS/src/.deps/: cmdl_parser.Plo  conv_string.Plo  genericStds.Plo  wav_file.Plo
ffmpeg-3.2.5/libavcodec/: libavcodec.pc
ffmpeg-3.2.5/libavdevice/: libavdevice.pc
ffmpeg-3.2.5/libavfilter/: libavfilter.pc
ffmpeg-3.2.5/libavformat/: libavformat.pc  protocol_list.c
ffmpeg-3.2.5/libx264/: x264_arm64_v8a_build.sh  x264_arm_build.sh  x264_mips_build.sh  x264_x86_64_build.sh  x264_x86_build.sh
ffmpeg-3.2.5/mylib/lib/: libfdk-aac.la
gradle/wrapper/: gradle-wrapper.properties
(+171 files in other folders)
